--- a/Plan/2020.md
+++ b/Plan/2020.md
@@ -1,1 +1,148 @@
-# 2020's Study to-do list
+# **2020's Study to-do list**
+
+## **10월**
+
+🖖 **4주차(10/19~10/25)**
+
+**1.** 2020 NIPA 온라인 인공지능/데이터분석 믹스앤매치 아카데미 <[필수과정] 인공지능으로 주가 예측 체험하기>
+
+- 01 파이썬 데이터 분석 기초 점검 및 복습
+- 02 주식 데이터의 이해와 분석
+- 03 주가 예측을 위한 인공지능 모델만들기
+- 04 인공지능으로 주가 예측하기
+
+<br>
+
+🖐 **5주차(10/26~11/1)**  
+**1.** 인프런 < 파이썬 입문과 크롤링기초 부트 캠프 (2020 업데이트) >
+
+- 섹션 3. 크롤링과 웹 기본
+- 섹션 4. 꼭 알아둬야할 Open API와 데이터를 다루는 포맷 이해와 활용
+- 섹션 5. 한단계 올라서는 크롤링과 프로그래밍
+
+**2.** edwith < [부스트코스] 웹프로그래밍 >
+
+- 2 DB 연결 웹 앱: 4. redirect & forward - BE
+- 2 DB 연결 웹 앱: 5. scope - BE
+- 2 DB 연결 웹 앱: 6. JSTL & EL - BE  
+
+<br>
+<br>
+
+## **11월**
+☝ **1주차(11/2~11/8)**
+
+**1.** 인프런 < SQL/DB(MySQL) 기본부터 파이썬/데이터분석 활용까지! >
+
+- 섹션 1. 데이터베이스와 RDBMS 이해
+- 섹션 2. SQL 기초 문법의 이해 (데이터베이스 만들기)
+- 섹션 3. SQL 기초 문법의 이해 (데이터 다루기)
+
+**2.** edwith < [부스트코스] 웹프로그래밍 >
+- 2 DB 연결 웹 앱: 7. MySQL - BE
+- 2 DB 연결 웹 앱: 8. SQL - BE
+- 2 DB 연결 웹 앱: 9. Maven -BE
+- 2 DB 연결 웹 앱: 10. JDBC - BE
+- 2 DB 연결 웹 앱: 11. WEB API - BE  
+
+<br>
+
+✌ **2주차(11/9~11/15)**
+
+**1.** 인프런 < SQL/DB(MySQL) 기본부터 파이썬/데이터분석 활용까지! >
+
+- 섹션 4. 파이썬으로 다루는 MySQL
+- 섹션 5. 실전 라이브 프로그래밍으로 이해하는 크롤링과 MySQL
+- 섹션 6. 데이터 분석과 SQL
+
+**2.** 
+edwith <[부스트코스] 웹 프로그래밍>
+
+- 3 웹 앱 개발: 예약서비스 1/4: 7. Spring Core - BE
+- 3 웹 앱 개발: 예약서비스 1/4: 8. Spring JDBC - BE
+- 3 웹 앱 개발: 예약서비스 1/4: 9. Spring MVC - BE
+- 3 웹 앱 개발: 예약서비스 1/4: 10. 레이어드 아키텍처(Layered Architecture) - BE
+- 3 웹 앱 개발: 예약서비스 1/4: 11. Controller - BE
+
+<br>
+
+🤟 **3주차(11/16~11/22)**
+
+**1.** 인프런 < NoSQL DB (몽고DB/mongodb) 기본부터 파이썬/데이터분석 활용까지! >
+
+- 섹션 1. NoSQL 이해
+- 섹션 2. 몽고DB 준비
+- 섹션 3. 몽고DB 기본
+- 섹션 4. 몽고DB와 파이썬 
+- 섹션 5. 파이썬 크롤링과 몽고DB - 최신 현업 개발의 이해 
+- 섹션 6. 데이터 분석과 몽고DB
+
+**2.** edwith < [부스트코스] 웹프로그래밍 >
+
+- 5 웹 앱 개발: 예약서비스 3/4: 4. 상태유지기술(Cookie & Session) - BE
+- 5 웹 앱 개발: 예약서비스 3/4: 5. Spring 에서의 Session 사용법 - BE
+- 5 웹 앱 개발: 예약서비스 3/4: 6. 인터셉터 - BE
+- 5 웹 앱 개발: 예약서비스 3/4: 7. 아규먼트 리졸버 - BE
+
+<br>
+
+🖖 **4주차(11/23~11/29)**
+
+**1.** 인프런 < 처음하는 파이썬 데이터 분석 [전처리, pandas, 시각화까지 전과정 기본 기술 쉽게 익히기] >
+
+- 섹션 0. 강의 소개와 수업전 알아둘 사항
+- 섹션 1. 주피터 노트북 설치와 사용법 이해하기 (사전 준비)
+- 섹션 2. 데이터 분석을 위한 파이썬 문법 정리
+- 섹션 3. 데이터 분석을 위한 다양한 데이터 포맷 이해와 파이썬 활용
+- 섹션 4. pandas 기본 문법과 탐색적 데이터 분석 이해 및 활용
+
+**2.** edwith < [부스트코스] 웹프로그래밍 >
+
+- 6 웹 앱 개발: 예약서비스 4/4: 3. 파일 업로드 & 다운로드 - BE 
+
+<br>
+<br>
+
+## **12월**
+☝ **1주차(11/30~12/6)**
+
+**1.** 인프런 < 처음하는 파이썬 데이터 분석 [전처리, pandas, 시각화까지 전과정 기본 기술 쉽게 익히기] >
+
+- 섹션 5. 탐색전 데이터 분석의 이해와 데이터 분석 기본 패턴 익숙해지기
+- 섹션 6. 데이터 전처리를 위한 pandas 라이브러리 사용법 익히기
+- 섹션 7. 실전 파이썬 데이터 전처리로 코로나 현황 이해하기
+- 섹션 8. 데이터 분석을 위한 최신 시각화 라이브러리 사용법
+- 섹션 9. 가장 핫한 이커머스 데이터, 실제 데이터 분석하기
+
+<br>
+
+✌ **2주차(12/7~12/13)**
+
+**1.** 2020 NIPA 온라인 인공지능/데이터분석 믹스앤매치 아카데미 <[선택과정] 파이썬으로 시작하는 데이터 분석>
+
+- 01 NumPy 사용해보기
+- 02 Pandas 기본 알아보기
+- 03 Pandas 심화 알아보기
+- 04 Matplotlib 데이터 시각화
+- 05 월드컵 데이터 분석해보기 
+
+<br>
+
+🤟 **3주차(12/14~12/20)**
+
+**1.** 2020 NIPA 온라인 인공지능/데이터분석 믹스앤매치 아카데미 <[선택과정] 데이터 분석과 머신러닝>
+
+- 01 머신러닝과 데이터 과학 이해하기
+- 02 데이터 과학자 이해하기 for 비전공자
+- 03 머신러닝을 위한 데이터 이해하기
+- 04 머신러닝 실무 체험
+- 05 파이썬 라이브러리를 활용한 기초 행렬 미션
+- 06 회귀분석기법 미션
+- 07 딥러닝 인공신경망 뉴럴넷 미션
+
+
+
+<br>
+
+🖖 **4주차(12/21~12/27)**
+
